create chat/room, get chat/room of particular user,getChat member of chat/room, get message of chat/room or user, socketlogic, saveMessage,created link to join chat/room, get all user of system
