# src/routes/userInfo.route.ts
@@ -1,6 +1,6 @@
 import express from 'express';
 import { authenticateJWT } from '@/middlewares/userInfo.middlewares';
-import { edictUserInfo, userInfo } from '../controllers/userInfo.controller';
+import { edictUserInfo, getAllUser, userInfo } from '../controllers/userInfo.controller';
 import { upload } from '@/middlewares/fileUpload.middlewares';
 import path from 'path';
 
@@ -8,4 +8,6 @@ const userInfoRouter = express.Router();
 
 userInfoRouter.get('/userInfo', authenticateJWT, userInfo);
 userInfoRouter.patch('/edictUserInfo', upload.single('avatar'), authenticateJWT, edictUserInfo);
+userInfoRouter.use('/uploads', express.static(path.join(__dirname, '..', '..', 'uploads')));
+userInfoRouter.get('/allUsers', getAllUser);
 export default userInfoRouter;
